--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
   "license": "MIT",
   "devDependencies": {
     "@nice-digital/eslint-config": "^1.0.1",
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^7.2.4",
     "babel-core": "^6.10.4",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-lodash": "^3.2.9",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-syntax-flow": "^6.8.0",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -62,9 +62,9 @@
     "compression": "^1.6.2",
     "debug": "^3.1.0",
     "es3ify-loader": "^0.2.0",
-    "eslint": "^4.9.0",
+    "eslint": "^4.15.0",
     "eslint-loader": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.19.0",
+    "eslint-plugin-flowtype": "^2.41.0",
     "express": "^4.14.0",
     "extend": "^3.0.0",
     "grunt": "^1.0.1",
@@ -85,34 +85,35 @@
     "grunt-sass-lint": "^0.2.2",
     "grunt-sassdoc": "^2.0.2",
     "grunt-webpack": "^3.0.2",
-    "html-minifier": "^3.4.3",
+    "html-minifier": "^3.5.8",
     "istanbul": "^1.1.0-alpha.1",
     "jit-grunt": "^0.10.0",
     "jquery": "^3.1.1",
-    "jsdom": "^11.3.0",
+    "jsdom": "^11.5.1",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.0",
     "lodash": "^4.16.2",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "mocha-clean": "^1.0.0",
-    "moment": "^2.15.1",
+    "moment": "^2.20.1",
     "node-common-errors": "^0.4.0",
     "nunjucks": "^3.0.0",
     "nunjucks-loader": "^2.4.8",
     "pixrem": "^4.0.1",
     "postcss-banner": "^3.0.0",
     "serve-favicon": "^2.4.2",
-    "sinon": "^4.0.2",
+    "sinon": "^4.1.4",
     "sinon-chai": "^2.8.0",
     "string-replace-webpack-plugin": "0.1.3",
     "time-grunt": "^1.4.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.9.3"
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.10.1"
   },
   "dependencies": {
-    "@nice-digital/icons": "^1.1.0",
-    "keycode": "^2.1.7"
+    "@nice-digital/icons": "^1.3.0",
+    "keycode": "^2.1.7",
+    "marked": "^0.3.12"
   },
   "engines": {
     "node": ">=4"
