NOC-7 Typography updates (#40)
* Add typography examples to sample site

* Darken body colour slightly

* Fix broken footer icon

* Fix footer icon sizes

* Add colour for headings

* Fix inverse panel example

* Typography tweaks

* Fix headings on dark (inverse) backgrounds

* Update headings

* Revert headings colour

* Add font size 6 back in for backwards compatability

* Update container width to use spacing, rather than percentage based

* Fix some line height values for larger font sizes

* Hero updates to allow for footer and more flexible layout

* Fix security vulnerabilities

* Stop html from scrolling horizontally

* Move container width into its own variable

* Release v0.5.2-rc.1

* Fix linting issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system",
-  "version": "0.5.1",
+  "version": "0.5.2-rc.1",
   "description": "Your source for creating beautiful, consistent experiences across NICE",
   "keywords": [
     "css",
@@ -50,15 +50,15 @@
   "devDependencies": {
     "@nice-digital/eslint-config": "^1.0.1",
     "autoprefixer": "^7.2.4",
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-flow": "^6.8.0",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chalk": "^2.3.0",
@@ -70,17 +70,17 @@
     "eslint-plugin-flowtype": "^2.41.0",
     "express": "^4.14.0",
     "extend": "^3.0.0",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.3",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-documentation": "^1.2.3",
     "grunt-env": "^0.4.4",
     "grunt-eslint": "^20.1.0",
     "grunt-express-server": "^0.5.3",
     "grunt-mocha-test": "^0.13.2",
-    "grunt-modernizr": "^1.0.2",
+    "grunt-modernizr": "^1.0.3",
     "grunt-newer": "^1.2.0",
     "grunt-postcss": "^0.9.0",
     "grunt-release-it": "^1.0.1",
@@ -95,7 +95,7 @@
     "jsdom": "^11.5.1",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.0",
-    "lodash": "^4.16.2",
+    "lodash": "^4.17.11",
     "mocha": "^4.1.0",
     "mocha-clean": "^1.0.0",
     "mocha-teamcity-reporter": "^1.1.1",
